After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782505 - retro-gtk: (on_input_state): should not be reached
retro-gtk: (on_input_state): should not be reached
Status: RESOLVED FIXED
Product: gnome-games
Classification: Core
Component: retro-gtk
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Games maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-11 08:42 UTC by Adrien Plazas
Modified: 2017-05-11 08:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
retro-environment: Return in case of no input interface (1.71 KB, patch)
2017-05-11 08:46 UTC, Adrien Plazas
committed Details | Review

Description Adrien Plazas 2017-05-11 08:42:34 UTC
** (retro-demo:3): CRITICAL **: file /home/aplazas/Projects/retro-gtk/retro-gtk/retro-environment.c: line 497 (on_input_state): should not be reached
Comment 1 Adrien Plazas 2017-05-11 08:46:43 UTC
Created attachment 351607 [details] [review]
retro-environment: Return in case of no input interface

Don't print criticals if the core has no input interface and simply
return a default value as the an input interface isn't mandatory.
Comment 2 Adrien Plazas 2017-05-11 08:47:18 UTC
Attachment 351607 [details] pushed as 373437c - retro-environment: Return in case of no input interface