retro-environment: Return in case of no input interface

Don't print criticals if the core has no input interface and simply
return a default value as the an input interface isn't mandatory.

https://bugzilla.gnome.org/show_bug.cgi?id=782505